fixing alignment on resize

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,10 +23,9 @@
 .aboutme {
   background-color: #dde6d5;
   width: 100%;
-  height: 100%;
   position: relative;
   padding: 10%;
-  overflow: auto;
+  min-height: 100%;
 }
 .aboutcontent {
   width: 80%;
@@ -35,14 +34,18 @@
 }
 .aboutmeheader {
   margin: auto;
-  width: 50%;
-  padding: 20px;
-  padding-bottom: 40px;
   text-align: center;
+  width: 100%;
+  padding: 10px;
+  display: inline-block;
 }
 .content2 {
   height: 80%;
   width: 100%;
+  margin: auto;
+  text-align: center;
+  padding: 10px;
+  display: inline-block;
 }
 .aboutimage {
   width: 30%;
@@ -66,9 +69,10 @@
 }
 .links2 {
   margin: auto;
-  width: 50%;
+  width: 80%;
   padding: 10px;
   text-align: center;
+  display: inline-block;
 }
 .email {
   margin: auto;
@@ -90,11 +94,16 @@ i {
 }
 
 .arrow {
+  margin: auto;
   position: absolute;
-  left: 50%;
-  top: 80%;
+  left: 48%;
+  bottom: 10%;
 }
-
+.arrowalign {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 .bounce {
   -moz-animation: bounce 2s infinite;
   -webkit-animation: bounce 2s infinite;
@@ -102,9 +111,8 @@ i {
 }
 .home {
   width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
+  min-height: 110%;
+  margin: 0;
   background-image: url(../assets/sparkle_bg.jpg);
   background-color: #cccccc;
   background-position: center; /* Center the image */
@@ -113,15 +121,17 @@ i {
   position: relative;
 }
 .navmenu {
-  width: 40%;
-  height: 50%;
-  left: 30%;
-  top: 25%;
-  bottom: 25%;
+  margin: 0;
   position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  height: 50%;
+  width: 50%;
 }
 .btn1 {
-  width: 100%;
+  width: 60%;
   border-radius: 30px;
   text-align: center;
   text-transform: uppercase;
@@ -129,27 +139,34 @@ i {
   outline: none;
   background-color: lightblue;
   border: black solid 2px;
+  margin: auto;
+  padding: 10px;
 }
 .navbuttons {
-  width: 60%;
-  height: 70%;
-  left: 20%;
-  top: 15%;
-  bottom: 15%;
+  margin: 0;
   position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+
+  text-align: center;
+  min-width: 60%;
+
+  height: 70%;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
   align-items: center;
 }
 .links {
+  margin: auto;
+  padding: 10px;
+  text-align: center;
   align-items: center;
   width: 60%;
   height: 10%;
-  left: 20%;
-  top: 85%;
-  bottom: 15%;
-  position: absolute;
+
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -171,14 +188,15 @@ i {
   .aboutimage {
     float:none;
     display:block;
-    margin-left: 0%;
-    width: 100%;
     height: 70%;
+    margin: auto;
+    width: 50%;
   }
   .aboutmessage{
     float:none;
     display:block;
-    width:100%;
-    margin-right: 0%;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
   }
 }
